<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/csgo">

    <Button
        android:id="@+id/buttonSign"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="302dp"
        android:layout_height="67dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/black"
        android:hint="Sign Up"
        android:onClick="onClickSignin"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/white_round_corners_background"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/white_round_corners_background"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:hint="@string/Sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="74dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:contentDescription="@android:string/cancel"
        android:onClick="onClickBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />
</androidx.constraintlayout.widget.ConstraintLayout>