<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/csgo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="56dp"
                android:hint="Welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/apiQuote"
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:text="@string/Quote"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/apiAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/Author"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="123dp"
                    android:layout_height="123dp"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ak" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="161dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/white"
                    android:hint="My Stats"
                    android:textColorHint="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="48dp"
                android:layout_marginRight="12dp"
                android:orientation="horizontal"
                android:paddingLeft="12dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="161dp"
                    android:layout_height="90dp"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/infernos" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="161dp"
                    android:layout_height="90dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:hint="Spots Guide"
                    android:onClick="onClickSpotGuide"
                    android:textColorHint="@color/black" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:contentDescription="@string/Log_out"
        android:onClick="onClickLogout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>